# pokeapi

./: .env.development  .gitignore  LICENSE  README.md  README_jp.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: flake8.yml  mypy.yml  pytest.yml  static_pages.yml  tests.yml
docker/: .env.tmp  docker-compose.yml  docker-compose_actions.yml
docker/actions/: Dockerfile
docker/elasticdump/: Dockerfile
docker/elasticdump/src/: entrypoint.sh  pokemon_data.json  pokemon_mapping.json
docker/elasticsearch/: Dockerfile
docker/python/: Dockerfile
docs/: doc.py  index.html
docs/static/: index.html
pokeapi/: config.py  main.py  param.py  query.py
pokeapi/routers/: pokemon.py  pokemon_router.py
pokeapi/schemas/: message_schema.py  pokemon.py  pokemon_schema.py
pokeapi/search/: accessor.py  config.py  param.py  query.py
tests/: conftest.py  test_accessor.py  test_config.py  test_main.py  test_param.py  test_pokemon.py  test_pokemon_router.py  test_query.py
